# kinect-bridge

./: .gitignore  CMakeLists.txt  README  cvmat_serialization.h  cvmat_serialization_test.cpp  env.sh  env_win.sh  kinect-bridge.cpp  run_configure.sh  run_distclean.sh
kinect_bridge/: CMakeLists.txt  client.cpp  client.h  connection.h  cvmat_serialization.h  demo.cpp  kbDebug.cpp  kbDebug.h  kinect_bridge.cpp  kinect_bridge.h  kinect_bridge_buffer.cpp  kinect_bridge_buffer.h  kinect_bridge_client.cpp  kinect_bridge_connection.hpp  kinect_bridge_demo.cpp  kinect_bridge_server.cpp  log.properties  package.cpp  package.h  package_buffer.cpp  package_buffer.h  run_client.sh  run_server.sh  server.cpp  server.h
kinect_bridge/test/: CMakeLists.txt  run_test_buffer.sh  run_test_cvmatserialization.sh  run_test_package.sh  test_buffer.cpp  test_cvmatserialization.cpp  test_package.cpp
src/: CMakeLists.txt
src/kinect_bridge_server/: CMakeLists.txt
testresults/: unix_binary.data  unix_portable_binary.data  win_binary.data
