cmake_minimum_required(VERSION 2.6)

PROJECT(kinect-bridge)

ENABLE_TESTING()

SET(CMAKE_LIBRARY_PATH ${CMAKE_LIBRARY_PATH})

SET(EXECUTABLE_OUTPUT_PATH "${CMAKE_BINARY_DIR}/bin")
SET(LIBRARY_OUTPUT_PATH "${CMAKE_BINARY_DIR}/lib")

# Default values
SET(NESTK_USE_FREENECT 0)
SET(NESTK_USE_OPENNI 1)

add_definitions( "-g" )

ADD_SUBDIRECTORY(external)
ADD_SUBDIRECTORY(kinect_bridge)
